force-app/main/default/objects/AO_Program__c.object
<CustomObject>
    <description>Object to capture all the Programs offered by Monash abroad outbound team</description>
    <fields>
        <fullName>AO_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country_Attribute__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AO_Description__c</fullName>
        <description>Program Description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AO_Form_Deadline_Date__c</fullName>
        <description>Enter form completion date in current academic year</description>
        <inlineHelpText>Enter form completion date in current academic year</inlineHelpText>
        <label>Form Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AO_Program_Location__c</fullName>
        <description>Program Locations to be captured in this field</description>
        <inlineHelpText>Populate Program locations</inlineHelpText>
        <label>Program Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AO_Program_Type__c</fullName>
        <description>Capture appropriate Type for the Form</description>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Global Co-Curricular Experience (GCE)</fullName>
                </value>
                <value>
                    <fullName>Global Immersion Guarantee (GIG)</fullName>
                </value>
                <value>
                    <fullName>Global Independent Research (GIR)</fullName>
                </value>
                <value>
                    <fullName>Global Intercampus Program semester in Australia (GIP)</fullName>
                </value>
                <value>
                    <fullName>Global Intercampus Program semester in Malaysia (GIP)</fullName>
                </value>
                <value>
                    <fullName>Global Study Tours (GST)</fullName>
                </value>
                <value>
                    <fullName>Global Summer and Winter short term programs (GSP/GWP)</fullName>
                </value>
                <value>
                    <fullName>Global Work Integrated Learning (GWIL)</fullName>
                </value>
                <value>
                    <fullName>Independent Study Abroad (ISA)</fullName>
                </value>
                <value>
                    <fullName>Monash Global Campus Intensives in Malaysia (MGCI)</fullName>
                </value>
                <value>
                    <fullName>Monash Global Campus Intensives in Prato (MGCI)</fullName>
                </value>
                <value>
                    <fullName>Monash Led Programs</fullName>
                    <isActive>false</isActive>
                    <label>Monash Led Programs</label>
                </value>
                <value>
                    <fullName>Partner Led Programs</fullName>
                    <isActive>false</isActive>
                    <label>Partner Led Programs</label>
                </value>
                <value>
                    <fullName>Semester exchange (EXC)</fullName>
                </value>
                <value>
                    <fullName>Student Exchange</fullName>
                    <isActive>false</isActive>
                    <label>Student Exchange</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AO_Program_Year__c</fullName>
        <description>Program Year to be selected</description>
        <label>Program Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Business Unit to be captured for Program</description>
        <formula>CASE(
   TEXT(AO_Program_Type__c),
   &quot;Global Study Tours (GST)&quot;, &quot;Study_Tours_GIG_GST&quot; ,
   &quot;Monash Global Campus Intensives in Malaysia (MGCI)&quot;, &quot;Monash_Led&quot; ,
   &quot;Monash Global Campus Intensives in Prato (MGCI)&quot;, &quot;Monash_Led&quot; ,
   &quot;Global Immersion Guarantee (GIG)&quot;, &quot;Study_Tours_GIG_GST&quot; ,
   &quot;Global Co-Curricular Experience (GCE)&quot;, &quot;Study_Tours_GCE_GWIL&quot; ,
   &quot;Global Work Integrated Learning (GWIL)&quot;, &quot;Study_Tours_GCE_GWIL&quot; ,
   &quot;Global Independent Research (GIR)&quot;, &quot;Partner_Led&quot; ,
   &quot;Independent Study Abroad (ISA)&quot;, &quot;Partner_Led&quot; ,
   &quot;Global Summer and Winter short term programs (GSP/GWP)&quot;, &quot;Partner_Led&quot; ,
   &quot;Global Intercampus Program semester in Australia (GIP)&quot;, &quot;Partner_Led&quot; ,
   &quot;Global Intercampus Program semester in Malaysia (GIP)&quot;, &quot;Partner_Led&quot; ,
   &quot;Semester exchange (EXC)&quot;, &quot;Partner_Led&quot; ,
   &quot;Other&quot;
)</formula>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Enter Program end date in current academic year</description>
        <inlineHelpText>Enter Program end date in current academic year</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Enter Program start date in current academic year</description>
        <inlineHelpText>Enter Program start date in current academic year</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <description>Program Terms to be selcted for configuration</description>
        <label>Terms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Semester 1</fullName>
                </value>
                <value>
                    <fullName>Semester 2</fullName>
                </value>
                <value>
                    <fullName>Sem 1 &amp; Sem 2</fullName>
                </value>
                <value>
                    <fullName>Sem 2 &amp; Sem 1</fullName>
                </value>
                <value>
                    <fullName>Summer A (Nov-Dec)</fullName>
                </value>
                <value>
                    <fullName>Summer B (Jan-Feb)</fullName>
                </value>
                <value>
                    <fullName>Winter (May-July)</fullName>
                </value>
                <value>
                    <fullName>Tri A (March-May)</fullName>
                </value>
                <value>
                    <fullName>Tri B (June-Sept)</fullName>
                </value>
                <value>
                    <fullName>Tri C (Nov-Jan)</fullName>
                </value>
                <value>
                    <fullName>Term 1 (T1-57)</fullName>
                </value>
                <value>
                    <fullName>Calendar Year</fullName>
                </value>
                <value>
                    <fullName>Module 5</fullName>
                </value>
                <value>
                    <fullName>Module 6</fullName>
                </value>
                <value>
                    <fullName>Module 7</fullName>
                </value>
                <value>
                    <fullName>Module 8</fullName>
                </value>
                <value>
                    <fullName>Module 10</fullName>
                </value>
                <value>
                    <fullName>Module 11</fullName>
                </value>
                <value>
                    <fullName>Module 12</fullName>
                </value>
                <value>
                    <fullName>Module 13</fullName>
                </value>
                <value>
                    <fullName>Module 14</fullName>
                </value>
                <value>
                    <fullName>OS-HELP Term 1</fullName>
                </value>
                <value>
                    <fullName>OS-HELP Term 2</fullName>
                </value>
                <value>
                    <fullName>OS-HELP Term 3</fullName>
                </value>
                <value>
                    <fullName>OS-HELP Term 4</fullName>
                </value>
                <value>
                    <fullName>OS-HELP Term 5</fullName>
                </value>
                <value>
                    <fullName>OS-HELP Term 6</fullName>
                </value>
                <value>
                    <fullName>S1</fullName>
                    <isActive>false</isActive>
                    <label>S1</label>
                </value>
                <value>
                    <fullName>S1+S2</fullName>
                    <isActive>false</isActive>
                    <label>S1+S2</label>
                </value>
                <value>
                    <fullName>S2</fullName>
                    <isActive>false</isActive>
                    <label>S2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AO_Program_Type__c</columns>
        <columns>AO_Program_Year__c</columns>
        <columns>Terms__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X2024</fullName>
        <columns>NAME</columns>
        <columns>AO_Program_Type__c</columns>
        <columns>AO_Program_Year__c</columns>
        <columns>Terms__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AO_Program_Year__c</field>
            <operation>equals</operation>
            <value>2024</value>
        </filters>
        <label>2024 Programs</label>
    </listViews>
    <listViews>
        <fullName>X2025_Programs</fullName>
        <columns>NAME</columns>
        <columns>AO_Program_Type__c</columns>
        <columns>AO_Program_Year__c</columns>
        <columns>Terms__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AO_Program_Year__c</field>
            <operation>equals</operation>
            <value>2025</value>
        </filters>
        <label>2025 Programs</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AO_VALIDATE_DATES_IN_PAST</fullName>
        <active>false</active>
        <description>Start, End or Deadline Date can&apos;t be in past</description>
        <errorConditionFormula>OR(AND(NOT(ISBLANK(End_Date__c)),End_Date__c &lt;  TODAY())  ,  AND(NOT(ISBLANK(AO_Form_Deadline_Date__c)),AO_Form_Deadline_Date__c &lt; TODAY()) , AND(NOT(ISBLANK(Start_Date__c)), Start_Date__c &lt;  TODAY() ))</errorConditionFormula>
        <errorMessage>Start Date, End Date or Form Deadline Date can&apos;t be in past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AO_VALIDATE_END_BEFORE_START_DATE</fullName>
        <active>false</active>
        <description>End and Deadline date can&apos;t be before Start Date</description>
        <errorConditionFormula>OR(End_Date__c &lt; Start_Date__c ,  AO_Form_Deadline_Date__c &lt; Start_Date__c)</errorConditionFormula>
        <errorMessage>Form Deadline Date and End Date can&apos;t be before Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AO_VALIDATE_SAME_DEADLINE_END_DATE</fullName>
        <active>false</active>
        <description>End date shouldn&apos;t be before Deadline date</description>
        <errorConditionFormula>End_Date__c &lt;= AO_Form_Deadline_Date__c</errorConditionFormula>
        <errorDisplayField>AO_Form_Deadline_Date__c</errorDisplayField>
        <errorMessage>Form Deadline Date can&apos;t be same or post Program End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AO_VALIDATE_SAME_START_END_DATE</fullName>
        <active>false</active>
        <description>Start and End date shouldn&apos;t be same</description>
        <errorConditionFormula>End_Date__c =  Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Start Date and End Date can&apos;t be same. Please update</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VALIDATE_PROGRAM_YEAR</fullName>
        <active>true</active>
        <description>Program year should not be past year value</description>
        <errorConditionFormula>VALUE(TEXT(AO_Program_Year__c)) &lt;YEAR(TODAY())</errorConditionFormula>
        <errorDisplayField>AO_Program_Year__c</errorDisplayField>
        <errorMessage>Program Year can&apos;t be a previous year</errorMessage>
    </validationRules>
</CustomObject>